--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       <div class="col-xs-2 scrollable" id="Upgrades" ng-controller="UpgradesController as uc">
         <h3><span class="glyphicon glyphicon-wrench"></span> Upgrades</h3>
         <hr>
-        <ul class="media-list" ng-cloak>
+        <ol class="media-list" ng-cloak>
           <li class="media" ng-repeat="u in uc.upgrades" ng-show="u.is_visible()">
             <div class="media-body">
               <h4 class="media-heading">{{ u.name }} <span ng-show="u.level > 0" class="badge">Level {{ u.level | niceNumber }}</span></h4>
@@ -161,7 +161,7 @@
               <button class="btn btn-primary" ng-disabled="!u.is_available()" ng-click="uc.upgrade(u)">Buy <small>({{ u.cost | currency }})</small></button>
             </div>
           </li>
-        </ul>
+        </ol>
       </div>
     </div>
     <div class="modal fade" id="infoBox" tabindex="-1" role="dialog" aria-labelledby="infoBoxLabel" aria-hidden="true">
